<resources>
    <string name="app_name">NoteTaking</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_email">Masukkan Email</string>
    <string name="input_password">Masukkan Password</string>
    <string name="dont_hv_account">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="input_username">Masukkan Username</string>
    <string name="input_confirm_password">Masukkan Konfirmasi Password</string>
    <string name="note_list">Note list</string>
    <string name="action_create">action create</string>
    <string name="empty_notes">empty notes</string>
    <string name="empty_list">Empty list!</string>
    <string name="no_notes_desc">You have no notes at this moment.</string>
    <string name="log_out">Log Out</string>
    <string name="insert">Insert Note</string>
    <string name="update_note">Update Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="dialog_delete_mssg">This action cannot be undone. Are you sure you want to delete this note?</string>
</resources>