<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvNoteList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/note_list"
            android:textSize="24sp"
            android:textColor="@color/dark_blue_pastel"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/ivEmptyList"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:contentDescription="@string/empty_notes"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNoteList"
            app:layout_constraintVertical_bias="0.3"
            tools:src="@drawable/empty_list"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvEmptyList"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_list"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/blue"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/ivEmptyList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_notes_desc"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/tvEmptyList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="64dp"
        android:id="@+id/rvNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:id="@+id/create"
        android:layout_margin="16dp"
        android:backgroundTint="@color/light_orange_pastel"
        android:contentDescription="@string/action_create"
        app:srcCompat="@drawable/round_add"
        app:tint="@color/white_blue"/>




</androidx.coordinatorlayout.widget.CoordinatorLayout>